--- a/common/bib/digcom.bib
+++ b/common/bib/digcom.bib
@@ -186,6 +186,20 @@
   urla         = {http://www.amazon.com/dp/0849386098},
   }
 
+@book{ebert2003,
+  isbn      = {9781558608481},
+  lccn      = {2002107243},
+  title     = {Texturing \& Modeling: A Procedural Approach},
+  series    = {The Morgan Kaufmann Series in Computer Graphics},
+  author    = {Ebert, D.S. and Musgrave, F.K. and Peachey, D. and Perlin, K. and Hart, J.C. and Worley, S.},
+  series    = {Morgan Kaufmann series in computer graphics and geometric modeling},
+  urlx      = {https://books.google.com/books?id=F4t-5zSsqr4C},
+  url       = {http://books.google.com/books?vid=isbn9781558608481},
+  year      = {2003},
+  publisher = {Morgan Kaufmann},
+  pages     = {687},
+}
+
 @book{greenhoe_abcdc,
   title        = {A Book Concerning Digital Communications},
   author       = {Daniel J. Greenhoe},
@@ -470,6 +484,18 @@
   url          = {http://books.google.com/books?vid=ISBN0030560977},
   urla         = {http://www.amazon.com/dp/0030560977},
   language     = {English},
+  }
+
+@inproceedings{perlin2002,
+  author       = {Ken Perlin},
+  title        = {Improving Noise},
+  institution  = {Media Research Laboratory, Dept. of Computer Science, New York University},
+  booktitle    = {SIGGRAPH '02: Proceedings of the 29th annual conference on Computer graphics and interactive techniques},
+  month        = {July},
+  year         = {2002},
+  pages        = {681--682},
+  note         = {url{https://doi.org/10.1145/566570.566636}},
+  url          = {http://www.heathershrewsbury.com/dreu2010/wp-content/uploads/2010/07/ImprovingNoise.pdf},
   }
 
 @book{phillips1995,
