--- a/common/bib/wavelets.bib
+++ b/common/bib/wavelets.bib
@@ -90,6 +90,36 @@
   month        = {January 3},
   }
 
+@book{chui1992w,
+  isbn10       = {0121745848},
+  isbn         = {9780121745844},
+  url          = {http://books.google.com/books?vid=ISBN9780121745844},
+  urlw         = {http://www.worldcat.org/isbn/0121745848},
+  urla         = {http://www.amazon.com/dp/0121745848},
+  author       = {Charles K. Chui},
+  title        = {An Introduction to Wavelets},
+  series       = {Wavelet Analysis and Its Applications},
+  volume       = {1},
+  publisher    = {Academic Press},
+  address      = {San Diego, California, USA},
+  year         = {1992},
+  month        = {January 3},
+  pages        = {264},
+  }
+
+@book{chui2016,
+  isbn10       = {1483282864},
+  isbn         = {9781483282862},
+  url          = {http://books.google.com/books?vid=ISBN9781483282862},
+  author       = {Charles K. Chui},
+  title        = {An Introduction to Wavelets},
+  series       = {Wavelet Analysis and Its Applications},
+  volume       = {1},
+  publisher    = {Elsevier},
+  year         = {2016},
+  pages        = {278},
+  }
+
 @book{chui1988,
   author       = {Charles K. Chui},
   title        = {Multivariate Splines},
@@ -584,19 +614,33 @@
   }
   
 @book{pinsky2002,
+  isbn         = {9780534376604},
+  isbn10       = {0-534-37660-6},
   author       = {Mark A. Pinsky},
   title        = {Introduction to Fourier Analysis and Wavelets},
   publisher    = {Brooks/Cole},
   address      = {Pacific Grove},
   year         = {2002},
-  isbn         = {0-534-37660-6},
-  isbn13       = {978-0534376604},
   pages        = {380+xx},
   library      = {QA403.5.P56 2002},
   urlp         = {http://www.math.northwestern.edu/~pinsky/},
   urlg         = {http://books.google.com/books?vid=ISBN0534376606},
   urlw         = {http://www.worldcat.org/isbn/0534376606},
   url          = {http://www.amazon.com/dp/0534376606},
+  }
+
+@book{pinsky2008,
+  isbn         = {9780821847978},
+  isbn10       = {082184797X},
+  author       = {Mark A. Pinsky},
+  title        = {Introduction to Fourier Analysis and Wavelets},
+  publisher    = {American Mathematical Society},
+  year         = {2008},
+  pages        = {376},
+  url          = {http://books.google.com/books?vid=ISBN9780821847978},
+  volume       = {102},
+  series       = {Graduate studies in mathematics},
+  issn         = {1065-7339},
   }
 
 @book{prasad,
