--- a/common/stromberg_wavelet.tex
+++ b/common/stromberg_wavelet.tex
@@ -23,7 +23,7 @@
 %--------------------------------------
 The \fnctd{simple tent function} $\fLambda_{\sigma}$ for $\sigma\in\setA_0$ is defined as
 \defbox{
-  \fLambda_{\sigma}(x) \eqd \brbl{\begin{array}{ll} 
+  \fLambda_{\sigma}(x) \eqd \brbl{\begin{array}{ll}
       1-\sigma+x    & \text{for $x\in\intcc{\sigma-1}{\sigma  }$}
     \\1+\sigma-x    & \text{for $x\in\intcc{\sigma  }{\sigma+1}$}
     \\0             & \text{otherwise}
@@ -38,7 +38,7 @@ The \fnctd{simple tent function} $\fLambda_{\sigma}$ for $\sigma\in\setA_0$ is d
   }
 %--------------------------------------
 \defbox{
-  S(x) \eqd \brbl{\begin{array}{ll} 
+  S(x) \eqd \brbl{\begin{array}{ll}
         \brs{S(\sigma)-S(\sigma-1)}\brp{x-\sigma}+S(\sigma) & \text{for $x\in\intcc{\sigma-1}{\sigma  }$}
       \\\brs{S(\sigma+1)-S(\sigma)}\brp{x-\sigma}+S(\sigma) & \text{for $x\in\intcc{\sigma  }{\sigma+1}$}
   \end{array}}
@@ -56,10 +56,10 @@ The \fnctd{simple tent function} $\fLambda_{\sigma}$ for $\sigma\in\setA_0$ is d
   }
 %--------------------------------------
 \thmbox{
-  0 = \inprod{S(x)}{\fLambda_{\sigma }(x)} = 
+  0 = \inprod{S(x)}{\fLambda_{\sigma }(x)} =
     \brbl{\begin{array}{l ll}
       S\brp{\sigma -1}+ 4S\brp{\sigma}+S\brp{\sigma +1}
-      &   \text{for $\sigma\in\setn{2,3,4,\ldots}$} 
+      &   \text{for $\sigma\in\setn{2,3,4,\ldots}$}
       \\
       S\brp{0} + 6S\brp{\frac{1}{2}} + 13S\brp{1} + 4S\brp{2}
       &   \text{for $\sigma=1$}
@@ -68,22 +68,22 @@ The \fnctd{simple tent function} $\fLambda_{\sigma}$ for $\sigma\in\setA_0$ is d
       &   \text{for $\sigma=0$}
       \\
       S\brp{\sigma-\frac{1}{2}}+ 4S\brp{\sigma}+S\brp{\sigma+\frac{1}{2}}
-      &   \text{for $\sigma\in\setn{\ldots, -\frac{5}{2}, -2, -\frac{3}{2},-1,-\frac{1}{2}}$} 
+      &   \text{for $\sigma\in\setn{\ldots, -\frac{5}{2}, -2, -\frac{3}{2},-1,-\frac{1}{2}}$}
   \end{array}}
   }
 \end{theorem}
 \begin{proof}
 \begin{enumerate}
-  \item lemma: \label{ilem:stromberg_AB} 
+  \item lemma: \label{ilem:stromberg_AB}
     \begin{align*}
         &\int_{x=\sigma-1}^{x=\sigma}   \brs{ (A-B)(x-\sigma)+A           } (1-\sigma+x)    \dx
     \\&= \int_{x=\sigma-1}^{x=\sigma}   \brs{ A(1-\sigma+x) + B(\sigma-x) } (1-\sigma+x)    \dx
-    \\&= \int_{x=\sigma-1}^{x=\sigma}  A\brs{ x^2 + 2x(1-\sigma)        + (1-\sigma)^2    } 
+    \\&= \int_{x=\sigma-1}^{x=\sigma}  A\brs{ x^2 + 2x(1-\sigma)        + (1-\sigma)^2    }
                                      + B\brs{-x^2 +  x(\sigma+\sigma-1) + \sigma(1-\sigma)} \dx
-    \\&= \brs{ A\brs{ \frac{1}{3}x^3 +             x^2(1-\sigma ) + x(1-\sigma)^2    } 
+    \\&= \brs{ A\brs{ \frac{1}{3}x^3 +             x^2(1-\sigma ) + x(1-\sigma)^2    }
              + B\brs{-\frac{1}{3}x^3 + \frac{1}{2} x^2(2\sigma-1) + x\sigma(1-\sigma)}
              }_{x=\sigma-1}^{x=\sigma}
-    \\&= A\brs{ \frac{1}{3}\brp{\sigma^3-\brp{\sigma^3-3\sigma^2+3\sigma-1}} +            \brp{\sigma^2-\brp{\sigma^2-2\sigma+1}}(1-\sigma ) + (1-\sigma)^2\brp{\sigma-(\sigma-1)} } 
+    \\&= A\brs{ \frac{1}{3}\brp{\sigma^3-\brp{\sigma^3-3\sigma^2+3\sigma-1}} +            \brp{\sigma^2-\brp{\sigma^2-2\sigma+1}}(1-\sigma ) + (1-\sigma)^2\brp{\sigma-(\sigma-1)} }
     \\&+ B\brs{-\frac{1}{3}\brp{\sigma^3-\brp{\sigma^3-3\sigma^2+3\sigma-1}} + \frac{1}{2}\brp{\sigma^2-\brp{\sigma^2-2\sigma+1}}(2\sigma-1) + \sigma(1-\sigma)                    }
     \\&= A\brs{ \brp{\sigma^2 - \sigma + \frac{1}{3} } +            (2\sigma-1)(1-\sigma ) + (-\sigma+1)^2     }
        + B\brs{-\brp{\sigma^2 - \sigma + \frac{1}{3} } + \frac{1}{2}(2\sigma-1)(2\sigma-1) + \sigma(-\sigma+1) }
@@ -92,17 +92,17 @@ The \fnctd{simple tent function} $\fLambda_{\sigma}$ for $\sigma\in\setA_0$ is d
     \\&= \boxed{\frac{1}{3}A + \frac{1}{6}B}
     \end{align*}
 
-  \item lemma: \label{ilem:stromberg_CA} 
+  \item lemma: \label{ilem:stromberg_CA}
     \begin{align*}
         &\int_{x=\sigma}^{x=\sigma+1}   \brs{ (C-A)(x-\sigma)+C           } (1+\sigma-x)    \dx
     \\&= \int_{x=\sigma}^{x=\sigma+1}   \brs{ C(1-\sigma+x) + A(\sigma-x) } (1+\sigma-x)    \dx
-    \\&= \int_{x=\sigma}^{x=\sigma+1}  C\brs{-x^2 +  x(\sigma+\sigma+1) + \sigma(-\sigma-1)    } 
+    \\&= \int_{x=\sigma}^{x=\sigma+1}  C\brs{-x^2 +  x(\sigma+\sigma+1) + \sigma(-\sigma-1)    }
                                      + A\brs{ x^2 +  x(-\sigma-1-1-\sigma) + (1+\sigma)^2} \dx
     \\&= \brs{ C\brs{-\frac{1}{3}x^3 + \frac{1}{2} x^2(2\sigma+1) - x\sigma(\sigma+1)}
-              +A\brs{ \frac{1}{3}x^3 -             x^2( \sigma+1) + x(\sigma+1)^2    } 
+              +A\brs{ \frac{1}{3}x^3 -             x^2( \sigma+1) + x(\sigma+1)^2    }
              }_{x=\sigma}^{x=\sigma+1}
     \\&= C\brs{-\frac{1}{3}\brp{\brp{\sigma^3+3\sigma^2+3\sigma+1}-\sigma^3} + \frac{1}{2}\brp{\brp{\sigma^2+2\sigma+1}-\sigma^2}(2\sigma+1) - \sigma(\sigma+1) }
-    \\&+ A\brs{ \frac{1}{3}\brp{\brp{\sigma^3+3\sigma^2+3\sigma+1}-\sigma^3} -            \brp{\brp{\sigma^2+2\sigma+1}-\sigma^2}( \sigma+1) + (\sigma+1)^2     } 
+    \\&+ A\brs{ \frac{1}{3}\brp{\brp{\sigma^3+3\sigma^2+3\sigma+1}-\sigma^3} -            \brp{\brp{\sigma^2+2\sigma+1}-\sigma^2}( \sigma+1) + (\sigma+1)^2     }
     \\&= C\brs{-\sigma^2 + \sigma - \frac{1}{3} + \frac{1}{2}(2\sigma+1)(2\sigma+1) - \sigma^2 -\sigma }
        + A\brs{ \sigma^2 + \sigma + \frac{1}{3} - (2\sigma+1)( \sigma+1) + \sigma^2 + 2\sigma + 1      }
     \\&= C\brs{\sigma^2(-1+2-1) + \sigma(-1+1+1-1) + \brp{-\frac{1}{3}+\frac{1}{2}}}
@@ -121,9 +121,9 @@ The \fnctd{simple tent function} $\fLambda_{\sigma}$ for $\sigma\in\setA_0$ is d
       \\&= \int_{x=\sigma-1}^{x=\sigma}S(x)\fLambda_\sigma(x)\dx
          + \int_{x=\sigma}^{x=\sigma+1}S(x)\fLambda_\sigma(x)\dx
       \\&\eqd \int_{x=\sigma-1}^{x=\sigma  } \brs{ (A-B)(x-\sigma)+A } (1-\sigma+x) \dx
-         + \int_{x=\sigma  }^{x=\sigma+1} \brs{ (C-A)(x-\sigma)+C } (1+\sigma-x) \dx
+       \\&+ \int_{x=\sigma  }^{x=\sigma+1} \brs{ (C-A)(x-\sigma)+C } (1+\sigma-x) \dx
         && \text{by \pref{idef:stromberg_ABC}}
-      \\&= \frac{1}{3}A + \frac{1}{6}B + \frac{1}{6}C + \frac{1}{3}A
+      \\&= \brs{\frac{1}{3}A + \frac{1}{6}B} + \brs{\frac{1}{6}C + \frac{1}{3}A}
         && \text{by \pref{ilem:stromberg_AB} and \pref{ilem:stromberg_CA}}
       \\&= \frac{1}{6}\brs{B + 4A + C}
       \\&\eqd \boxed{\frac{1}{6}\brs{S(\sigma-1) + 4S(\sigma) + S(\sigma+1)}}
@@ -131,5 +131,4 @@ The \fnctd{simple tent function} $\fLambda_{\sigma}$ for $\sigma\in\setA_0$ is d
     \end{align*}
 \end{enumerate}
 \end{proof}
-
 
