--- a/common/norm_minimization.tex
+++ b/common/norm_minimization.tex
@@ -694,6 +694,112 @@ using R with the \lstinline[language=R]{lubridate} package like this:
  plot( year, ratio, col="blue", type='o' );
 \end{lstlisting}
 
+%---------------------------------------
+\begin{example}
+\footnote{
+  \url{https://math.stackexchange.com/questions/3990086/}
+  }
+\label{ex:plant}
+%---------------------------------------
+let $tn = c(0:10)$ and
+$yn = c(18,33,56,90,130,170,203,225,239,247,251)$ represent the growth of a plant.
+
+%Have you considered using the _Method of Least Squares_ to find $\alpha $? 
+%For that method you can define an _error function_ $$e(t_n)\eqd N(t_n)-y_n\eqd \frac{H_{\infty}}{1+\brs{H_{\infty}/N_0-1}e^{-\alpha t_n}}-y_n$$ and 
+ You want to find the $\alpha $ that minimizes that cost; that is, you want to find where (with respect to $\alpha $) the cost function 
+``goes to the lowest point". 
+Suppose you set $N_0\eqd N(0)=18$ and $N_*\eqd252$. % $\ldots$
+%From the plot, it appears that $cost(\alpha )$ is minimized around $\alpha =0.65$.
+Let 
+$\ds \esth(t) \eqd \frac{H_{\infty}}{1+\brp{\frac{H_{\infty}}{H_0}-1}e^{-\alpha t}}$
+\end{example}
+\begin{proof}
+\begin{enumerate}
+  \item definition: \label{idef:plant_cost} Define a cost function (the error cost) as the 
+        norm squared of $e(t_n)$ as 
+        \\\indentx$\ds \fCost(\alpha )\eqd\norm{e}^2\eqd\sum_{n=0}^{n=10}e^2(t_n)$
+
+  \item lemma:\label{ilem:plant1}
+    \begin{align*}
+      \boxed{\pderiv{}{\alpha }\esth(t)}
+        &\eqd \pderiv{}{\alpha }\brs{\frac{H_{\infty}}{1+\brp{\frac{H_{\infty}}{H_0}-1}e^{-\alpha t}}}
+        && \text{by definition of $\esth(t)$}
+      \\&= \frac{0-H_{\infty}\brs{\frac{H_{\infty}}{H_0}-1}e^{-\alpha t}(-t)}{\brp{1+\brs{\frac{H_{\infty}}{H_0}-1}e^{-\alpha t}}^2}
+        && \text{by Quotient Rule}
+      \\&= \frac{H_{\infty}^2}{\brp{1+\brs{\frac{H_{\infty}}{H_0}-1}e^{-\alpha t}}^2}
+      \brs{\frac{1}{H_0}-\frac{1}{H_{\infty}}}te^{-\alpha t}
+      \\&\eqd \boxed{\brs{\frac{1}{H_0}-\frac{1}{H_{\infty}}}\esth^2(t)te^{-\alpha t}}
+      && \text{by definition of $\esth(t)$}
+    \end{align*}
+
+  \item lemma:\label{ilem:plant2}
+    \begin{align*}
+      \boxed{\pderiv{}{A}\esth(t)}
+        &\eqd \pderiv{}{A }\brs{\frac{A}{1+\brp{\frac{A}{B}-1}e^{-\alpha t}}}
+        && \text{by definition of $\esth(t)$}
+      \\&= \frac{\brs{1+\brp{\frac{A}{B}-1}e^{-\alpha t}} - A\brs{\frac{1}{B}-1}e^{-\alpha t}(-t)}
+                {\brp{1+\brs{\frac{A}{B}-1}e^{-\alpha t}}^2}
+        && \text{by Quotient Rule}
+      \\&= \frac{1 - e^{-\alpha t}}
+                {\brp{1 + \brs{\frac{A}{B}-1}e^{-\alpha t}}^2}
+      \\&= \brs{\frac{1 - e^{-\alpha t}} {A^2}}
+           \brs{\frac{A}                 {1 + \brs{\frac{A}{B}-1}e^{-\alpha t}}}^2
+      \\&\eqd \boxed{\brs{\frac{1 - e^{-\alpha t}}{A^2}} \esth^2(t)}
+        && \text{by definition of $\esth(t)$}
+    \end{align*}
+
+  \item 
+    \begin{align*}
+    \boxed{0}
+      &= \frac{1}{2\brp{\frac{1}{H_0}-\frac{1}{H_{\infty}}}}\cdot0
+    \\&=\frac{1}{2\brp{\frac{1}{H_0}-\frac{1}{H_{\infty}}}}\pderiv{}{\alpha }\norm{e}^2
+    \\&\eqd \frac{1}{2\brp{\frac{1}{H_0}-\frac{1}{H_{\infty}}}}\pderiv{}{\alpha }\sum_{n=0}^{n=10}e^2(t_n)
+      && \text{by definition of $\norm{\cdot}$}
+    \\&\eqd \frac{1}{2\brp{\frac{1}{H_0}-\frac{1}{H_{\infty}}}}\pderiv{}{\alpha }\sum_{n=0}^{n=10}\brs{\esth(t_n)-y_n}^2
+      && \text{by definition of $e$}
+    \\&= \frac{1}{2\brp{\frac{1}{H_0}-\frac{1}{H_{\infty}}}}\sum_{n=0}^{n=10}2\brs{\esth(t_n)-y_n}\esth'(t_n)
+      && \text{by \thme{Chain Rule}}
+    \\&= \frac{1}{2\brp{\frac{1}{H_0}-\frac{1}{H_{\infty}}}}\sum_{n=0}^{n=10}2\brs{\esth(t_n)-y_n}\brs{\frac{1}{H_0}-\frac{1}{H_{\infty}}}\esth^2(t_n)te^{-\alpha t_n}
+      && \text{by \pref{ilem:plant1}}
+    \\&= \boxed{\sum_{n=0}^{n=10}\esth^2(t_n)\brs{\esth(t_n)-y_n}t_ne^{-\alpha t_n}}
+    \\&\eqd D\fCost(\alpha ) 
+      && \text{(call the sum $D\fCost(\alpha )$)}
+    \end{align*}
+
+  \item 
+    \begin{align*}
+    \boxed{0}
+      &= \frac{A^2}{2}\cdot0
+    \\&=\frac{A^2}{2}
+         \pderiv{}{A}\norm{e}^2
+    \\&\eqd \frac{A^2}{2}
+         \pderiv{}{A}\sum_{n=0}^{n=10}e^2(t_n)
+      && \text{by definition of $\norm{\cdot}$}
+    \\&\eqd \frac{A^2}{2}
+         \pderiv{}{A}\sum_{n=0}^{n=10}\brs{\esth(t_n)-y_n}^2
+      && \text{by definition of $e$}
+    \\&= \frac{A^2}{2}
+         \sum_{n=0}^{n=10}2\brs{\esth(t_n)-y_n}\esth'(t_n)
+      && \text{by \thme{Chain Rule}}
+    \\&= A^2
+         \sum_{n=0}^{n=10}  \brs{\esth(t_n)-y_n}
+                            \brs{\frac{1 - e^{-\alpha t_n}}{A^2}} \esth^2(t_n)
+      && \text{by \pref{ilem:plant2}}
+    \\&= \boxed{\sum_{n=0}^{n=10}  \brs{1 - e^{-\alpha t_n} } \esth^2(t_n) \brs{\esth(t_n)-y_n}}
+    \end{align*}
+\end{enumerate}
+
+Plotting $Dcost$ with respect to $\alpha $, it appears that $D\fCost(\alpha )$ crosses $0$ at around $\alpha =0.66$.
+
+The \href{https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/uniroot}{uniroot} function from the R 
+\href{https://www.rdocumentation.org/packages/stats/versions/3.6.2}{stats} package indicates that $D\fCost(\alpha )$ crosses $0$ 
+at $\alpha =0.6631183$ with estim.prec=6.103516e-05.
+
+Using $H_0\eqd18$, $H_{\infty}\eqd252$, and $\alpha \eqd0.6631183$, $\esth(t)$ 
+seems to fit the 11 data points fairly well ($cost(0.6631183)=31.32307$) $\ldots$
+
+\end{proof}
+
 %======================================
 %\section{Gradient search techniques}
 \section{Recursive forms}
