--- a/common/norm_minimization.tex
+++ b/common/norm_minimization.tex
@@ -737,9 +737,27 @@ $\ds \esth(t) \eqd \frac{H_{\infty}}{1+\brp{\frac{H_{\infty}}{H_0}-1}e^{-\alpha 
       \boxed{\pderiv{}{A}\esth(t)}
         &\eqd \pderiv{}{A }\brs{\frac{A}{1+\brp{\frac{A}{B}-1}e^{-\alpha t}}}
         && \text{by definition of $\esth(t)$}
-      \\&= \frac{\brs{1+\brp{\frac{A}{B}-1}e^{-\alpha t}} - A\brs{\frac{1}{B}-1}e^{-\alpha t}(-t)}
+      \\&= \frac{\brs{1+\brp{\frac{A}{B}-1}e^{-\alpha t}} - A\brs{\frac{1}{B}}e^{-\alpha t}}
                 {\brp{1+\brs{\frac{A}{B}-1}e^{-\alpha t}}^2}
         && \text{by Quotient Rule}
+      \\&= \frac{1 - e^{-\alpha t}}
+                {\brp{1 + \brs{\frac{A}{B}-1}e^{-\alpha t}}^2}
+      \\&= \brs{\frac{1 - e^{-\alpha t}} {A^2}}
+           \brs{\frac{A}                 {1 + \brs{\frac{A}{B}-1}e^{-\alpha t}}}^2
+      \\&\eqd \boxed{\brs{\frac{1 - e^{-\alpha t}}{A^2}} \esth^2(t)}
+        && \text{by definition of $\esth(t)$}
+    \end{align*}
+
+  \item lemma:\label{ilem:plant2}
+    \begin{align*}
+      \boxed{\pderiv{}{B}\esth(t)}
+        &\eqd \pderiv{}{B }\brs{\frac{A}{1+\brp{\frac{A}{B}-1}e^{-\alpha t}}}
+        && \text{by definition of $\esth(t)$}
+      \\&= \frac{ - (A/B^2)e^{-\alpha t}}
+                {\brp{1+\brs{\frac{A}{B}-1}e^{-\alpha t}}^2}
+        && \text{by Quotient Rule}
+\\
+\\
       \\&= \frac{1 - e^{-\alpha t}}
                 {\brp{1 + \brs{\frac{A}{B}-1}e^{-\alpha t}}^2}
       \\&= \brs{\frac{1 - e^{-\alpha t}} {A^2}}
@@ -761,7 +779,7 @@ $\ds \esth(t) \eqd \frac{H_{\infty}}{1+\brp{\frac{H_{\infty}}{H_0}-1}e^{-\alpha 
       && \text{by \thme{Chain Rule}}
     \\&= \frac{1}{2\brp{\frac{1}{H_0}-\frac{1}{H_{\infty}}}}\sum_{n=0}^{n=10}2\brs{\esth(t_n)-y_n}\brs{\frac{1}{H_0}-\frac{1}{H_{\infty}}}\esth^2(t_n)te^{-\alpha t_n}
       && \text{by \pref{ilem:plant1}}
-    \\&= \boxed{\sum_{n=0}^{n=10}\esth^2(t_n)\brs{\esth(t_n)-y_n}t_ne^{-\alpha t_n}}
+    \\&= \boxed{\sum_{n=0}^{n=10}\esth^2(t_n)\brs{\esth(t_n)-y_n} \brs{t_ne^{-\alpha t_n}}}
     \\&\eqd D\fCost(\alpha ) 
       && \text{(call the sum $D\fCost(\alpha )$)}
     \end{align*}
@@ -785,7 +803,7 @@ $\ds \esth(t) \eqd \frac{H_{\infty}}{1+\brp{\frac{H_{\infty}}{H_0}-1}e^{-\alpha 
          \sum_{n=0}^{n=10}  \brs{\esth(t_n)-y_n}
                             \brs{\frac{1 - e^{-\alpha t_n}}{A^2}} \esth^2(t_n)
       && \text{by \pref{ilem:plant2}}
-    \\&= \boxed{\sum_{n=0}^{n=10}  \brs{1 - e^{-\alpha t_n} } \esth^2(t_n) \brs{\esth(t_n)-y_n}}
+    \\&= \boxed{\sum_{n=0}^{n=10} \esth^2(t_n) \brs{\esth(t_n)-y_n} \brs{1 - e^{-\alpha t_n} }}
     \end{align*}
 \end{enumerate}
 
